--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -285,7 +285,7 @@
     width: 16%;
   }
 
-  .sun-times, .wind {
+  #sun-times, #wind, #rain {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -293,8 +293,8 @@
     gap: 0.2rem;
   }
 
-  .sun-times #badge-sunrise,
-  .sun-times #badge-sunset {
+  #sun-times #badge-sunrise,
+  #sun-times #badge-sunset {
     display: inline-flex;
     align-items: center;
     justify-content: center;
