--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -129,15 +129,16 @@
 
 .badge {
   display: inline-block;
-  width: 2.5rem;
-  height: 2.5rem;
   border-radius: 50%;
   font-weight: bold;
-  font-size: 0.9rem;
+  width: min(3em, 8vw);
+  height: min(3em, 8vw);
+  font-size: clamp(0.8rem, 2vw, 1.2rem);
   text-align: center;
   user-select: none;
   margin: 0.4rem 0.4rem;
   align-content: center;
+  padding: 0.2rem;
 }
 
 #badge-rain {
