--- a/css/base.css
+++ b/css/base.css
@@ -7,16 +7,20 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* hauteur écran */
+    min-height: 100vh;
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex: 1;
     padding: 2rem;
+}
+
+h1 {
+    text-align: center;
 }
 
 h2 {
