--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,17 @@ main {
   padding: 3rem 2rem;
   text-align: center;
   width: 80%;
+  margin: 0 auto;
+}
+
+main h1 {
+  margin-bottom: 1.5rem;
+}
+
+main p {
+    font-size: 1.3rem;
+    text-align: center;
+    margin-bottom: 1.5rem;
 }
 
 .buttons {
@@ -37,11 +48,6 @@ main {
 .btn:hover {
   background: #0088cc;
   box-shadow: 0 6px 14px rgba(0,136,204,0.6);
-}
-
-p {
-    font-size: 1.3rem;
-    text-align: center;
 }
 
 #logo-croisic {
