--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
-* {
+/* * {
   margin: 0; padding: 0; box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+} */
 
 main {
   flex: 1;
@@ -41,7 +41,6 @@ main p {
   letter-spacing: 0.05em;
   border-radius: 8px;
   text-decoration: none;
-  box-shadow: 0 4px 10px rgba(0,187,255,0.4);
   transition: background 0.3s ease, box-shadow 0.3s ease;
 }
 
