--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .site-header {
     background: #0077be;
     color: white;
