--- a/css/weather-station.css
+++ b/css/weather-station.css
@@ -100,6 +100,7 @@
 }
 
 .chart-weather-station {
+    max-height: 20rem;
     max-width: 89%;
     border: 1px solid #ccc;
     margin-bottom: 20px;
