--- a/css/weather-station.css
+++ b/css/weather-station.css
@@ -101,7 +101,7 @@
 
 .chart-weather-station {
     max-height: 20rem;
-    max-width: 89%;
+    max-width: 60rem;
     border: 1px solid #ccc;
     margin-bottom: 20px;
 }
