--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -290,7 +290,7 @@
     justify-content: center;
     align-items: center;
     width: 35%;
-    gap: 0.5rem;
+    gap: 0.4rem;
   }
 
   #span-wind {
@@ -330,6 +330,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0rem 0rem;
   }
 
 }
